Fixed the scrollbar

--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,7 @@ body {
 
 /* Simulate scan lines */
 .crt:before {
+    padding-top: 30px;
     content: '';
     position: absolute;
     top: 0;
@@ -61,6 +62,11 @@ body {
     z-index: 10001; /* Ensure gradient is on top */
 }
 
+#main-content{
+    padding-right: 30px;
+    z-index: 100;
+}
+
 header, main, .start-button, a {
     background: transparent;
     text-shadow: 0 0 5px rgba(0, 255, 0, 0.5);
@@ -92,12 +98,16 @@ header h1, section h2, a {
 }
 
 .scroll-wrapper {
-    height: calc(100vh - 60px); /* Adjust height to account for start bar */
+    height: calc(100vh - 80px); /* Adjust height to account for start bar */
     overflow-y: auto; /* Allow scrolling within the container */
     position: relative;
+    margin-top: 30px;
+    margin-bottom: 80px;
     padding-top: 20px; /* Add padding to create space at top */
     padding-bottom: 40px; /* Add padding to create space at bottom */
     box-sizing: border-box; /* Include padding in height calculations */
+    z-index: -1;
+    background-color: rgba(0, 0, 0, 0);
 }
 
 header {
@@ -358,7 +368,7 @@ a:hover {
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #00ff00; /* Background for the thumb */
+    background: #303030; /* Background for the thumb */
     border-radius: 10px; /* Rounding the edges of the thumb */
 }
 
@@ -372,7 +382,6 @@ a:hover {
 
 /* Firefox scrollbar styles */
 * {
-    scrollbar-width: thin;
     scrollbar-color: #00ff00 #111; /* Green thumb, dark track */
 }
 
